--- a/src/app/contacts/contact-list.component.html
+++ b/src/app/contacts/contact-list.component.html
@@ -7,12 +7,8 @@
 			<span class="item-badge">{{user.id}}</span> {{user.name}} in role: {{user.roleAsString }}
 
 			<span class="user-icon" [ngSwitch]="user.role + user.gender">
-        <span *ngSwitchCase="CUSTOMER_MALE"><img [src]="customerMaleImage"></span>
-        <span *ngSwitchCase="CUSTOMER_FEMALE"><img [src]="customerFemaleImage"></span>
-        <span *ngSwitchCase="OPERATOR_MALE"><img [src]="operatorMaleImage"></span>
-        <span *ngSwitchCase="OPERATOR_FEMALE"><img [src]="operatorFemaleImage"></span>
-        <span *ngSwitchCase="ADMIN_MALE"><img [src]="adminMaleImage"></span>
-        <span *ngSwitchCase="ADMIN_FEMALE"><img [src]="adminFemaleImage"></span>
+        <span *ngSwitchCase="CONTACT_MALE"><img [src]="contactMaleImage"></span>
+        <span *ngSwitchCase="CONTACT_FEMALE"><img [src]="contactFemaleImage"></span>
         <span *ngSwitchDefault>Other</span>
 			</span>
 		</li>
