--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 
 	<!-- Here are displayed all routed views -->
 	<!-- router-outlet></router-outlet -->
+	<simple-form></simple-form>
 	<!--<simple-form></simple-form>
       <user-list></user-list>
       <product-list></product-list>
