--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 	<app-nav></app-nav>
 
 	<!-- Here are displayed all routed views -->
-	<!-- router-outlet></router-outlet -->
-	<simple-form></simple-form>
+	<router-outlet></router-outlet>
+	<!--<simple-form></simple-form>-->
+	<!--<contact-list></contact-list>-->
 	<!--<simple-form></simple-form>
       <user-list></user-list>
       <product-list></product-list>
