Add new contact form.

--- a/src/app/app-nav.component.html
+++ b/src/app/app-nav.component.html
@@ -28,7 +28,8 @@
                 <li><NavLink to="/repos/reactjs/react-router">React Router</NavLink></li>
                 <li><NavLink to="/repos/facebook/react">React</NavLink></li> -->
 						<li><a routerLink="/contacts"  routerLinkActive="active">All Contacts</a></li>
-						<!--<li><a href="#">Add New Contact</a></li>
+						<li><a routerLink="/contact/add"  routerLinkActive="active">Add New Contact</a></li>
+						<!--
 						<li><a href="#">Search Contact</a></li>
 						-->
 					</ul>
