--- a/src/app/contacts/contact-detail.component.html
+++ b/src/app/contacts/contact-detail.component.html
@@ -4,16 +4,18 @@
 	<div class="form-group">
 		<label class="control-label col-xs-3 hidden-xs" for="id">ID:</label>
 		<div class="col-xs-12 col-sm-9">
-			<input id="id" name="id" disabled class="form-control">
+			<input id="id" name="id" formControlName="id" disabled class="form-control">
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="control-label col-xs-3 hidden-xs" for="gender_M">Gender:</label>
 		<div class="col-xs-12 col-sm-9 col_radio">
-			<input class="col-xs-12 col-sm-9" id="gender_M" name="gender" formControlName="gender" type="radio" value="1" class="form-control">
+			<input class="col-xs-12 col-sm-9" id="gender_M" name="gender" formControlName="gender" type="radio" value="1" class="form-control"
+				[checked]="contact.gender === 1">
 			<label class="control-label col-xs-3 hidden-xs" for="gender_M">Male</label>
 
-			<input class="col-xs-12 col-sm-9" id="gender_F" name="gender" formControlName="gender" type="radio" value="0" class="form-control">
+			<input class="col-xs-12 col-sm-9" id="gender_F" name="gender" formControlName="gender" type="radio" value="0" class="form-control" 
+				[checked]="contact.gender === 0">
 			<label class="control-label col-xs-3 hidden-xs" for="gender_F">Female</label>
 			<div *ngIf="formErrors.gender" class="alert alert-danger">
 				{{ formErrors.gender }}
@@ -70,5 +72,4 @@
 			>Submit</button>
 	<button type="button" class="btn btn-danger" (click)="resetForm()">Reset</button>
   	<button type="button" class="btn btn-default" (click)="goBack()">Cancel</button>
-	   {{ formErrors | json }}
 </form>
