Delete contact, http-backend-service, finale code.

--- a/src/app/contacts/contact-detail.component.html
+++ b/src/app/contacts/contact-detail.component.html
@@ -71,5 +71,6 @@
 			[disabled]="!contactForm.valid"
 			>Submit</button>
 	<button type="button" class="btn btn-danger" (click)="resetForm()">Reset</button>
+	<button type="button" class="btn btn-danger" (click)="deleteContact()">DELETE</button>
   	<button type="button" class="btn btn-default" (click)="goBack()">Cancel</button>
 </form>
